fixes spacing in grid

--- a/sass/layout/_definition.scss
+++ b/sass/layout/_definition.scss
@@ -23,6 +23,7 @@
         color: $color-gray-dark-1; 
         grid-column: 1 / 4;
         padding: 4rem;
+        margin-top: -7rem;
         
     }
 }
