--- a/src/index.css
+++ b/src/index.css
@@ -83,7 +83,8 @@ body {
     font-weight: 500;
     color: #999;
     grid-column: 1 / 4;
-    padding: 4rem; }
+    padding: 4rem;
+    margin-top: -7rem; }
 
 .header {
   height: 90vh;
